# CodingSnake

./: README.md  web.md
.github/workflows/: deploy-web.yml
adapter/: CodingSnake.hpp
adapter/release/: CodingSnake.hpp  compile.bat  compile.sh
bot/: CMakeLists.txt  CodingSnake.hpp  README.md  TODO.md  bot_main
bot/cmake/: README.md
bot/config/: bots.conf
bot/include/common/: BotConfigLoader.hpp  DirectionUtils.hpp
bot/include/strategies/: GluttonStrategy.hpp  InterceptorStrategy.hpp  ParasiteStrategy.hpp  PatrollerStrategy.hpp
bot/src/: main.cpp
bot/src/bots/glutton/: main.cpp
bot/src/bots/interceptor/: main.cpp
bot/src/bots/parasite/: main.cpp
bot/src/bots/patroller/: main.cpp
bot/src/common/: BotConfigLoader.cpp  DirectionUtils.cpp
bot/src/strategies/: GluttonStrategy.cpp  InterceptorStrategy.cpp  ParasiteStrategy.cpp  PatrollerStrategy.cpp
server/: CMakeLists.txt  README.md  config.json
server/include/database/: LeaderboardManager.h
server/include/managers/: GameManager.h
server/include/models/: Config.h
server/src/: main.cpp
server/src/database/: LeaderboardManager.cpp
server/src/handlers/: RouteHandler.cpp
server/src/managers/: GameManager.cpp
server/src/models/: Config.cpp
server/src/utils/: RateLimiter.cpp
web/frontend/: .env.production  README.md  vite.config.ts
web/frontend/src/constants/: index.ts
web/frontend/src/docs/: announcement.md  cpp.md  rules.md
web/frontend/src/types/: index.d.ts
web/frontend/src/views/: DocsView.vue  GameView.vue  WelcomeView.vue
